fixed layout on mobile device

--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -9,9 +9,9 @@ body {
 
 .widget {
   /* display: none; */
-  width: calc(100vw/3);
+  width: 30%;
   right: 0px;
-  height: 100vh;
+  height: 100%;
   position: fixed;
   background: #fff;
   /* border-radius: 10px 10px 10px 10px; */
@@ -36,7 +36,7 @@ body {
 
 .chats {
   /* display: none; */
-  height: calc(100vh - 110px);
+  height: calc(100% - 110px);
   padding: 2px;
   /* border-radius: 1px; */
   overflow-y: scroll;
@@ -879,4 +879,19 @@ video:focus {
     top: 0;
     bottom: 0;
     margin: auto;
+}
+
+@media only screen and (max-width: 768px) {
+  .image {
+    position: static;
+    display: block;
+    width: auto;
+    height: 30%;
+  }
+
+  .widget{
+    display: block;
+    width: 100%;
+    height: 70%;
+  }
 }
